adjusted html and css for all pages

--- a/booking-form.html
+++ b/booking-form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to Grand Gym, your ultimate destination for fitness and wellness.">
-    <title>Grand Gym</title>
+    <title>Grand Gym - Membership</title>
 
     <!--Favicon Generated using Favicon.io-->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
@@ -52,19 +52,20 @@
         <section class="col-12 col-md-11 col-xl-6">
             <form class="signup" action="success.html">
                 <h2 class="benefit text-center">Sign Up Form</h2>
+                <p>We'll contact you on the information provided</p><br>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" name="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp"
                         required>
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputName1" name="Name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="exampleInputName1" required>
+                    <label for="exampleInputName1" class="form-label">Name</label>
+                    <input type="text" class="form-control"  name="Name"  id="exampleInputName1" required>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label" name="Phone Number" for="exampleInputNumber1">Phone Number</label>
-                    <input type="number" class="form-control" id="exampleInputNumber1" required>
+                    <label class="form-label"  for="exampleInputNumber1">Phone Number</label>
+                    <input type="number" class="form-control" name="Phone Number" id="exampleInputNumber1" required>
                 </div>
                 <button target="_blank" type="submit" id="btn-submit" class="btn btn-primary">Submit</button>
             </form>
