--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Main Content -->
     <main>
         <div class="col-12">
-            <div id="show_bg_2">
+            <div id="bg-2">
                 <h3 id="bg-text" class="text-center">Smash your goals with cutting-edge kit on a spacious gym floor -
                     built to move with you. Dive into our
                     heated indoor pool for some serious lengths or kick back in our spa facilities. Jump into one of
