--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to Grand Gym, your ultimate destination for fitness and wellness.">
-    <title>Grand Gym</title>
+    <title>Grand Gym - Gallery</title>
 
     <!--Favicon Generated using Favicon.io-->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
